# llmize

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  llmize.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  version.yml
docs/: advanced_usage.rst  api.rst  citation.rst  conf.py  configuration.rst  contact.rst  contributing.rst  examples.rst  faq.rst  features.rst  how_it_works.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt  usage.rst
docs/modules/: llmize.methods.adopro.rst  llmize.methods.hlmea.rst  llmize.methods.hlmsa.rst  llmize.methods.opro.rst  llmize.methods.rst  llmize.rst  llmize.utils.parsing.rst  llmize.utils.rst
examples/TSP/: tsp.ipynb  tsp.py  tsp_problem.txt
examples/convex_optimization/: convex_experiment.py  convex_opt.ipynb  convex_problem.txt  nohup.out
examples/convex_optimization/results/: convex_results_20250320_1134.json
examples/linear_programming/: lp_optimization.ipynb  lp_problem.txt
examples/nn_hp_tuning/: mnist_tf copy.ipynb  mnist_tf.ipynb  mnist_tf.txt
examples/nuclear_fuel_optimization/: GE14.DOM.BOC.inp  analyze_results.ipynb  bwr_ge14.txt  bwr_ge14_experiment.py  bwr_ge14_opt.ipynb  cas5_functions.py  nohup.out
examples/nuclear_fuel_optimization/cas5_runs/: GE14.BOC.cax  GE14.BOC.inp  GE14.BOC.out  tmp.GE14.BOC.inp
examples/nuclear_fuel_optimization/results/: tsp_results_20250318_2152.json  tsp_results_20250319_1342.json
examples/tsp/: analyze_results.ipynb  nohup.out  tsp.ipynb  tsp.py  tsp_experiment.py
examples/tsp/results/: tsp_results_20250313.json  tsp_results_20250314_0945.json
llmize/: __init__.py  api.py  base.py  config.py
llmize/callbacks/: __init__.py  adapt_temp_on_plateau.py  early_stopping  early_stopping.py  optimal_score_stopping.py
llmize/llm/: llm_call.py  llm_init.py
llmize/methods/: __init__.py  adopro.py  hlmea.py  hlmsa.py  lmea.py  log.py  opro.py
llmize/utils/: __init__.py  decorators.py  llm_call.py  llm_init.py  logger.py  logging.py  parsing.py  plotting.py  pretty_print.py  truncate.py
scripts/: update_version.py
tests/: conftest.py  test_hlmea.py  test_hlmsa.py  test_llm_call.py  test_lmea.py  test_opro.py  test_parallel.py  test_parsing.py
