[build-system]
requires = ['setuptools>=42', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "llmize"
version = "0.1.1"
description = "A library for to use Large Language Models (LLMs) as numericaloptimizers"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["llm", "optimization", "opro", "in-context learning"]
authors = [
    {name = "Rizki Oktavian", email = "rizki@bwailabs.com"}
]
dependencies = [
    "numpy>=1.21.0",
    "google-genai>=1.5.0",
    "colorama>=0.4.6",
    "matplotlib>=3.5.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/rizkiokt/llmize"
Documentation = "https://llmize.readthedocs.io"
Repository = "https://github.com/rizkiokt/llmize.git"
"Bug Tracker" = "https://github.com/rizkiokt/llmize/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["llmize"]